@@ -317,7 +317,7 @@ INSERT IGNORE INTO `#__menu_types` VALUES
 INSERT IGNORE INTO `#__modules` VALUES
 (20, 'Top', '', 1, 'user3', 0, '0000-00-00 00:00:00', 1, 'mod_menu', 1, 1, '{"menutype":"top","startLevel":"0","endLevel":"0","showAllChildren":"0","tag_id":"","class_sfx":"","maxdepth":"10","window_open":"","layout":"","moduleclass_sfx":"","cache":"0"}', 0, ''),
 (22, 'Australian Parks ', '', 1, 'left', 0, '0000-00-00 00:00:00', 1, 'mod_menu', 1, 1, '{"menutype":"parks","startLevel":"0","endLevel":"0","showAllChildren":"0","tag_id":"","class_sfx":"","maxdepth":"10","window_open":"","layout":"","moduleclass_sfx":"","cache":"0"}', 0, ''),
-(23, 'About Joomla!', '', 3, 'left', 0, '0000-00-00 00:00:00', 1, 'mod_menu', 1, 1, '{"menutype":"aboutjoomla","startLevel":"0","endLevel":"0","showAllChildren":"0","tag_id":"","class_sfx":"","maxdepth":"10","window_open":"","layout":"","moduleclass_sfx":"_menu","cache":"0"}', 0, ''),
+(23, 'About Joomla!', '', 3, 'left', 0, '0000-00-00 00:00:00', 1, 'mod_menu', 1, 1, '{"menutype":"aboutjoomla","startLevel":"0","endLevel":"2","showAllChildren":"0","tag_id":"","class_sfx":"","maxdepth":"10","window_open":"","layout":"","moduleclass_sfx":"_menu","cache":"0"}', 0, ''),
 (24, 'Extensions', '', 1, 'right', 0, '0000-00-00 00:00:00', 1, 'mod_menu', 1, 1, '{"menutype":"aboutjoomla","startLevel":"2","endLevel":"3","showAllChildren":"0","tag_id":"","class_sfx":"","maxdepth":"10","window_open":"","layout":"","moduleclass_sfx":"","cache":"0"}', 0, ''),
 (25, 'Site Map', '', 1, 'syndicate', 0, '0000-00-00 00:00:00', 1, 'mod_menu', 1, 0, '{"menutype":"thissite","startLevel":"1","endLevel":"2","showAllChildren":"0","tag_id":"","class_sfx":"","maxdepth":"10","window_open":"","layout":"","moduleclass_sfx":"","cache":"0"}', 0, ''),
 (26, 'This Site', '', 1, 'left', 0, '0000-00-00 00:00:00', 1, 'mod_menu', 1, 1, '{"menutype":"thissite","startLevel":"0","endLevel":"1","showAllChildren":"0","tag_id":"","class_sfx":"","maxdepth":"10","window_open":"","layout":"","moduleclass_sfx":"_menu","cache":"0"}', 0, ''),
@@ -418,7 +418,6 @@ INSERT  INTO `#__modules_menu` VALUES
 (24, 275),
 (24, 276),
 (24, 277),
-(24, 279),
 (24, 281),
 (24, 282),
 (24, 283),
@@ -528,8 +527,6 @@ INSERT  INTO `#__modules_menu` VALUES
 (43, 274),
 (43, 275),
 (43, 276),
-(43, 278),
-(43, 279),
 (43, 281),
 (43, 282),
 (43, 284),
